--- a/calc3.html
+++ b/calc3.html
@@ -47,7 +47,7 @@
                     <input type="button" id="btnSearch" value="查询" />&nbsp;
                     <a href="javascript:;" id="btnShowMaterials">强化素材</a>&nbsp;
                     <a href="javascript:;" id="btnShowSkills">从者技能</a>&nbsp;
-                    <a href="javascript:;" id="btnShowNP">NP获取</a>&nbsp;
+                    <!--<a href="javascript:;" id="btnShowNP">NP获取</a>&nbsp;-->
                     <a href="javascript:;" id="btnRedirectKazemai">前往理想鄉</a>&nbsp;
                     <a href="javascript:;" id="btnRedirectWiki">前往wiki</a>&nbsp;
                     <datalist id="dlTips"></datalist>
