change altergo to alterego

--- a/rank.html
+++ b/rank.html
@@ -115,10 +115,10 @@
     .avenger2{
         background-position: -450px -50px;
     }    
-    .altergo{
+    .alterego{
         background-position: -500px 0;
     }   
-    .altergo2{
+    .alterego2{
         background-position: -500px -50px;
     }     
     .mooncancer{
@@ -174,7 +174,7 @@
         <span class="shielder" name="class" title="Shielder" data-on="1"></span>
         <span class="ruler" name="class" title="Ruler" data-on="1"></span>
         <span class="avenger" name="class" title="Avenger" data-on="1"></span>
-        <span class="altergo" name="class" title="Altergo" data-on="1"></span>
+        <span class="alterego" name="class" title="Alterego" data-on="1"></span>
         <span class="mooncancer" name="class" title="MoonCancer" data-on="1"></span>
         <span class="foreigner" name="class" title="Foreigner" data-on="1"></span>
     </div>
@@ -209,7 +209,7 @@
             <option value="Avenger">Avenger</option>
             <option value="Shielder">Shielder</option>
             <option value="MoonCancer">MoonCancer</option>
-            <option value="Altergo">Altergo</option>
+            <option value="Alterego">Alterego</option>
             <option value="BeastI">BeastI</option>
             <option value="BeastII">BeastII</option>
             <option value="BeastIII">BeastIII</option>
@@ -382,7 +382,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -408,7 +408,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -434,7 +434,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -460,7 +460,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastII":
                     case "BeastIII":
                     case "Foreigner":
@@ -486,7 +486,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastII":
                     case "BeastIII":
                     case "Foreigner":
@@ -512,7 +512,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastII":
                     case "BeastIII":
                     case "Foreigner":
@@ -541,7 +541,7 @@
                     case "Ruler":
                     case "Avenger":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                         careerResist=1.5;
                         break;
@@ -565,7 +565,7 @@
                     case "Assassin":
                     case "Ruler":
                     case "Shielder":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -591,7 +591,7 @@
                     case "Assassin":
                     case "Avenger":
                     case "Shielder":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -620,7 +620,7 @@
                     case "Avenger":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "BeastIII":
@@ -639,7 +639,7 @@
                     case "Assassin":
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "BeastI":
                     case "BeastII":
                     case "Foreigner":
@@ -657,7 +657,7 @@
                         break;                                
                 }             
                 break;                                                                                           
-            case "Altergo":
+            case "Alterego":
                 switch(targetCareer){
                     case "Ruler":
                         if(servant.servantNo==167){//杀生院祈荒怼Ruler等同狂阶克制
@@ -670,7 +670,7 @@
                         break;
                     case "Shielder":
                     case "MoonCancer":
-                    case "Altergo":
+                    case "Alterego":
                     case "Avenger":
                     case "BeastI":
                     case "BeastII":
@@ -712,7 +712,7 @@
                     case "BeastIII":
                         careerResist=1.0;
                         break;
-                    case "Altergo":
+                    case "Alterego":
                         careerResist=0.5;
                         break;
                     case "Berserker":
@@ -901,7 +901,7 @@
             case "Rider":
             case "Shielder":
             case "MoonCancer":
-            case "Altergo":
+            case "Alterego":
             case "Foreigner":
                 return 1.0;
             case "Archer":
