--- a/calc3.html
+++ b/calc3.html
@@ -277,7 +277,7 @@
                         <option value="1.1">Avenger</option>
                         <option value="1.0">Shielder</option>
                         <option value="1.0">MoonCancer</option>
-                        <option value="1.0">Altergo</option>
+                        <option value="1.0">Alterego</option>
                         <option value="1.0">Foreigner</option>
 
                     </select>
@@ -290,7 +290,7 @@
                         <option value="1.5">狂阶克制</option>
                         <option value="0.5">被克制</option>
                         <option value="1.2">克制Beast III</option>
-                        <option value="1.5">Altergo克制下三骑</option>
+                        <option value="1.5">Alterego克制下三骑</option>
                     </select>
                 </td>
                 <td>阵营克制</td>
