--- a/calc3.html
+++ b/calc3.html
@@ -948,7 +948,7 @@
 	function resetOc(servant) {
             $("txtTreasureSpecialAttack").value = 100;
             $("txtSpecialAttackPowerBuff").value = 0;
-
+            $("txtCardBuff").value = 0;
             $("txtAttackBuff").value = 0;
             $("txtTreasurePowerBuff").value = 0;
 			$("txtEnemyDefenceBuff").value = 0;
