--- a/calc4.html
+++ b/calc4.html
@@ -118,7 +118,7 @@
         <ul>
             <li><a href="javascript:;" class="active" data-url="calc3.html">宝具伤害计算器</a></li>
             <li><a href="javascript:;" data-url="calccard.html">指令卡伤害计算器</a></li>
-            <li><a href="javascript:;" data-url="https://fgo-archive.github.io/index/np_cal.html">NP计算器(友情链接)</a></li>
+            <li><a href="javascript:;" data-url="https://fgo-archive.github.io/index/np_cal.html">外链NP计算器</a></li>
             <!--<li><a href="javascript:;" data-url="guid.html">FGO伤害计算公式</a></li>
             <li><a href="javascript:;" data-url="http://bbs.ngacn.cc/read.php?tid=11783224">BUG反馈</a></li>
             <li><a href="javascript:;" data-url="updatelog.html">更新日志</a></li>-->
