--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body style="text-align:center;">
     <h1><a href="Q&A.html" target="_blank" class="text-gradient">Q&A说明(2018.01.05)</a></h1>
     <h1><a href="calc4.html">宝具伤害计算器(2018.06.15)</a></h1>
+	<h1><a href="calcm.html">宝具伤害计算器（测试）(2018.06.15)</a></h1>
     <h1>因原作者弃坑，目前计算器为个人维护版本(yutio888)，限于时间和精力，部分功能将暂停更新。 </h1>
 </body>
 </html>
