--- a/calccard.html
+++ b/calccard.html
@@ -292,7 +292,7 @@
             </tr>
             <tr>
                 <td colspan="8">
-                    <input type="button" value="计算" id="btnCalcute" onclick="calc()" />
+                    <input type="button" value="计算" id="btnCalculate" onclick="calc()" />
                     <label for="ckIsCalcTotal">计算总伤害<input type="checkbox" id="ckIsCalcTotal" /></label>
                 </td>
             </tr>
