--- a/calcm.html
+++ b/calcm.html
@@ -1007,10 +1007,17 @@
         }
             $("txtTreasureSpecialAttack").value = 100;
             $("txtSpecialAttackPowerBuff").value = 0;
-            $("txtCardBuff").value = 0;
+			$("txtFixedDamageBuff").value = $("txtFixedDamageBuff").basicvalue;
+            $("txtCardBuff").value = $("txtCardBuff").dataset.value;
             $("txtAttackBuff").value = 0;
             $("txtTreasurePowerBuff").value = 0;
-			$("txtEnemyDefenceBuff").value = 0;
+
+			let ocLevel1 = $("ddlOc").value; let ocs1 = servants[$("ddlChooseServant").value].oc;
+			let o= getFloat("txtEnemyDefenceBuff");
+			if(ocs1["type"] == "TreasureSpecialDefReduceAttck"){
+				$("txtEnemyDefenceBuff").value = getFloat("txtEnemyDefenceBuff") + ocs1[ocLevel1]
+			}
+			//$("txtEnemyFixedDamageReductionBuff").value = 0;
             $("ddlOc").selectedIndex = 0;
         
     }
