--- a/calc3.html
+++ b/calc3.html
@@ -355,7 +355,7 @@
                 <td colspan="8">
 					<input type="button" value="孔明buff" id="btnAddKM" onclick="addKM()" />
 					<input type="button" value="梅林buff" id="btnAddML" onclick="addML()" />
-					<input type="button" value="清空buff" id="btnClearBuff" onclick="resetOc()" />
+					<input type="button" value="清空buff" id="btnClearBuff" onclick="changeOc()" />
                     <input type="button" value="计算" id="btnCalcute" onclick="calc()" />
                 </td>
             </tr>
@@ -964,7 +964,7 @@
 		$("txtAttackBuff").value = getFloat("txtAttackBuff") + 20;
         let servant = servants[$("ddlChooseServant").value];
         if(servant.cardColor == 1.5){
-			$("txtCardBuff").value = getFloat("txtCardBuff") + 30;
+			$("txtCardBuff").value = getFloat("txtCardBuff") + 50;
 		}
 	}
 	
