adjust clear Buff

--- a/calc3.html
+++ b/calc3.html
@@ -979,13 +979,8 @@
         $("txtCardBuff").value = $("txtCardBuff").dataset.value;
         $("txtAttackBuff").value = 0;
         $("txtTreasurePowerBuff").value = 0;
-
-		let ocLevel1 = $("ddlOc").value; let ocs1 = servant.oc;
-		let o= getFloat("txtEnemyDefenceBuff");
-		if(ocs1["type"] == "TreasureSpecialDefReduceAttck"){
-			$("txtEnemyDefenceBuff").value = getFloat("txtEnemyDefenceBuff") + ocs1[ocLevel1]
-		}
-		//$("txtEnemyFixedDamageReductionBuff").value = 0;
+		$("txtEnemyDefenceBuff").value = 0;
+		$("txtEnemyFixedDamageReductionBuff").value = 0;
         //$("ddlOc").selectedIndex = 0;
         //设置回被动卡牌buff
         let originNum = getTxtAttrFloatNum("txtCardBuff", "value");
@@ -1044,28 +1039,9 @@
             }
         }
         else {
-            $("txtTreasureSpecialAttack").value = 100;
-            $("txtSpecialAttackPowerBuff").value = 0;
-			if(isNaN($("txtFixedDamageBuff").basicvalue)){$("txtFixedDamageBuff").value = 0;}
-			else {$("txtFixedDamageBuff").value = $("txtFixedDamageBuff").basicvalue;}
-            $("txtCardBuff").value = $("txtCardBuff").dataset.value;
-            $("txtAttackBuff").value = 0;
-            $("txtTreasurePowerBuff").value = 0;
-
-			let ocLevel1 = $("ddlOc").value; let ocs1 = servants[$("ddlChooseServant").value].oc;
-			let o= getFloat("txtEnemyDefenceBuff");
-			if(ocs1["type"] == "TreasureSpecialDefReduceAttck"){
-				$("txtEnemyDefenceBuff").value = getFloat("txtEnemyDefenceBuff") + ocs1[ocLevel1]
-			}
-			//$("txtEnemyFixedDamageReductionBuff").value = 0;
-            $("ddlOc").selectedIndex = 0;
-
-            //设置回被动卡牌buff
-            let originNum = getTxtAttrFloatNum("txtCardBuff", "value");
-            $("txtCardBuff").value = originNum;
-
-            //宝具副效果补充
-            bindTreasureSideEffect(servant);
+            clearBuff();
+			
+			$("ddlOc").selectedIndex = 0;
         }
     }
 
