--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<li><a href="javascript:;" data-url="http://bbs.ngacn.cc/read.php?tid=14304478">BUG反馈</a></li>
             <li><a href="javascript:;" data-url="guid.html">FGO伤害计算公式</a></li>
             
-            <li><a href="javascript:;" data-url="updatelog.html">更新日志</a></li>-->
+            <li><a href="javascript:;" data-url="updatelog.html">更新日志</a></li>
 -->
         </ul>
     </nav>
